Resolve #9025: Enhance Collapse API for Extensiblity and Plugin Usage
git-svn-id: http://mantisbt.svn.sourceforge.net/svnroot/mantisbt/trunk@5151 f5dc347c-c33d-0410-90a0-b07cc1902cb9

--- a/css/default.css
+++ b/css/default.css
@@ -129,6 +129,7 @@ div.quick-summary-right	{ width: 49%; padding: 2px; text-align: right; float: ri
 .underline-small		{ text-decoration: underline; font-size: 8pt; }
 .strike					{ text-decoration: line-through; }
 .strike-small			{ text-decoration: line-through; font-size: 8pt; }
+.hidden				{ display: none; }
 
 .nowrap
 {
